--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "birth",
     "natal"
   ],
-  "author": "Robert Davies",
+  "author": "The Rift Lab",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/theriftlab/immanuel-js/issues"
